--- a/surfsharkgui/assets/surfsharkgui.desktop
+++ b/surfsharkgui/assets/surfsharkgui.desktop
@@ -5,6 +5,6 @@ Terminal=false
 Type=Application
 Categories=Application
 Icon=surfsharkgui
-Exec=surfsharkvpngui
+Exec=sudo surfsharkvpngui
 StartupWMClass=surfsharkvpngui
 X-Purism-FormFactor=Workstation;Mobile;
