Correct case for Surfshark
Added GitHub's fork URL

--- a/surfsharkgui/assets/surfsharkgui.desktop
+++ b/surfsharkgui/assets/surfsharkgui.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
-Name=SurfShark VPN GUI
-GenericName=SurfShark
+Name=Surfshark VPN GUI
+GenericName=Surfshark
 Terminal=false
 Type=Application
 Categories=Application
